# SimpleHTTP

./: CMakeLists.txt  README.md  TCPServer.cpp  Util.h  WebSocketServer.h  application.cpp
HTTP/: HTTPClient.cpp  HTTPClient.h  HTTPServer.cpp  HTTPServer.h  Request.h
OldCode/: HTTPRequest.cpp  HTTPRequest.h  HTTPServer.cpp  HTTPServer.h  IObserver.h  ISubject.h  TCPServer.h  WebSocketServer.cpp  client.h  index.html
OldCode/HTTP/: HTTPClient.cpp  HTTPClient.h  HTTPServer.cpp  HTTPServer.h  Header.h  Method.h  Response.h  Status.h
OldCode/TCP/: TCPClient.cpp  TCPServer.cpp
OldCode/WebSocket/: WebSocketClient.cpp  WebSocketServer.cpp  WebSocketServer.h
TCP/: TCPClient.h  TCPServer.cpp  TCPServer.h
WebSocket/: WebSocketClient.h
site/: index.html
src/HTTP/: Header.h  Request.cpp  RequestHandler.cpp
src/HTTP/threading/: Job.h  ThreadPool.cpp  ThreadPool.h
src/http/: HTTPConnection.cpp  HTTPConnection.h  HTTPObject.h  HTTPServer.cpp  HTTPServer.h  HTTPServerSocket.cpp  HTTPServerSocket.h  Header.h  Method.h  Request.cpp  Request.h  Response.cpp  Response.h  Responses.cpp  Responses.h  Status.h
src/net/: Connection.cpp  Connection.h  HTTPServerSocket.cpp  HTTPServerSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
src/threading/: ThreadPool.cpp  ThreadPool.h
src/util/: List.h  ListNode.h  Queue.h
src/websocket/: WebsocketConnection.cpp  WebsocketConnection.h  WebsocketHandler.h
